# hgdbmi

./: .gitignore  CHANGELOG.md  LICENSE  README.md  cabal.project  cabal.project.local.ci  ci.dhall  default.nix  hgdbmi.cabal  overlay.nix  shell.nix
.github/workflows/: ci.yaml
src/Gdb/: Monad.hs
src/Gdbmi/: Commands.hs  IO.hs  Representation.hs  Semantics.hs
tests/: io-monad.hs  io.hs  pure.hs
