cabal-version:  2.2
name:           hgdbmi
category:       Embedded
version:        0.3
license:        BSD-3-Clause
license-file:   LICENSE
author:         Alexander Bernauer, Evan Martin
maintainer:     Alexander Bernauer <acopton@gmail.com>
stability:      provisional
homepage:       https://github.com/copton/hgdbmi
bug-reports:    https://github.com/copton/hgdbmi/issues
copyright:      (c) 2012 Alexander Bernauer <acopton@gmail.com>, 2008 Evan Martin <martine@danga.com>
Synopsis:       GDB Machine Interface: program-driven control of GDB
Description:
  GDB\/MI lets programs drive GDB. It can be used, for example, by GDB
  frontends. See section 27 of the GDB manual
  .
  This module encapsualtes a GDB subprocess and provides an API to send
  commands as well as receive both responses and notifications.
  .
  The actual GDB behavior diverges from the GDB manual in many points, so the
  implementation of the Machine Interface highly depends on the GDB version.
  This module is tested with GDB version 7.4.

build-type:     Simple

source-repository head
  type: git
  location: git://github.com/copton/hgdbmi.git

source-repository this
  type: git
  location: git://github.com/copton/hgdbmi.git
  tag: v0.2

library
  build-depends:
      base        >= 4 && < 5
    , parsec
    , process
    , unix
    , directory
    , stm
    , network

  exposed-modules:
    Gdbmi.IO
    Gdbmi.Commands
    Gdbmi.Representation
    Gdbmi.Semantics

  hs-source-dirs:     src
  ghc-options:        -Wall
  default-language:   Haskell2010

test-suite pure
  type:             exitcode-stdio-1.0
  main-is:          pure.hs
  other-modules:    Paste
  hs-source-dirs:   tests
  ghc-options:      -Wall
  default-language: Haskell2010
  build-depends:
      hgdbmi
    , base
    , HUnit
    , test-framework
    , test-framework-hunit
    , template-haskell

test-suite io
  type:             exitcode-stdio-1.0
  main-is:          io.hs
  other-modules:    Paste
  hs-source-dirs:   tests
  ghc-options:      -Wall
  default-language: Haskell2010
  build-depends:
      hgdbmi
    , base
    , directory
    , process
    , temporary
    , template-haskell
