cabal-version:  2.2
name:           hgdbmi
category:       Embedded
version:        0.3
license:        BSD-3-Clause
license-file:   LICENSE
author:         Alexander Bernauer, Evan Martin, sorki
maintainer:     sorki <srk@48.io>
stability:      provisional
homepage:       https://github.com/DistRap/hgdbmi
bug-reports:    https://github.com/DistRap/hgdbmi/issues
copyright:      (c) 2023 sorki <srk@48.io>, 2012 Alexander Bernauer <acopton@gmail.com>, 2008 Evan Martin <martine@danga.com>
Synopsis:       GDB Machine Interface: program-driven control of GDB
Description:
  GDB\/MI lets programs drive GDB. It can be used, for example, by GDB
  frontends. See section 27 of the GDB manual
  .
  This module encapsualtes a GDB subprocess and provides an API to send
  commands as well as receive both responses and notifications.
  .
  The actual GDB behavior diverges from the GDB manual in many points, so the
  implementation of the Machine Interface highly depends on the GDB version.
  This module is tested with GDB version 7.4.

build-type:     Simple
extra-source-files:
  LICENSE
  README.md

extra-doc-files:
  CHANGELOG.md

flag io-testsuite
  default:
    False
  description:
    Enable testsuite, which requires external binaries

flag build-readme
  default:
    False
  description:
    Build README.lhs example

source-repository head
  type: git
  location: git://github.com/DistRap/hgdbmi.git

library
  build-depends:
      base        >= 4 && < 5
    , async
    , data-default-class
    , directory
    , exceptions
    , mtl
    , network
    , parsec
    , process
    , stm
    , transformers
    , unix

  exposed-modules:
    Gdb
    Gdb.Monad
    Gdbmi.IO
    Gdbmi.Commands
    Gdbmi.Representation
    Gdbmi.Semantics

  hs-source-dirs:     src
  ghc-options:        -Wall
  default-language:   Haskell2010

executable hgdbmi-readme
  if !flag(build-readme)
    buildable: False
  build-depends:
      base >=4.12 && <5
    , hgdbmi
  build-tool-depends:
      markdown-unlit:markdown-unlit
  default-language: Haskell2010
  main-is: README.lhs
  ghc-options: -pgmL markdown-unlit -Wall

test-suite pure
  type:             exitcode-stdio-1.0
  main-is:          pure.hs
  other-modules:    Paste
  hs-source-dirs:   tests
  ghc-options:      -Wall
  default-language: Haskell2010
  build-depends:
      hgdbmi
    , base
    , HUnit
    , test-framework
    , test-framework-hunit
    , template-haskell

test-suite io

  if !flag(io-testsuite)
    buildable: False

  type:             exitcode-stdio-1.0
  main-is:          io.hs
  other-modules:    Paste
  hs-source-dirs:   tests
  ghc-options:      -Wall
  default-language: Haskell2010
  build-depends:
      hgdbmi
    , base
    , directory
    , process
    , temporary
    , template-haskell

test-suite io-monad

  if !flag(io-testsuite)
    buildable: False

  type:             exitcode-stdio-1.0
  main-is:          io-monad.hs
  other-modules:    Paste
  hs-source-dirs:   tests
  ghc-options:      -Wall
  default-language: Haskell2010
  build-depends:
      hgdbmi
    , base
    , directory
    , process
    , temporary
    , template-haskell
